--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Weather</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
       <style>
         * {
-         box-sizing: border-box;
+          box-sizing: border-box;
+        }
+        html, body {
+         margin: 0;
         }
       </style>
   </head>
